--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
-baseurl = "https://example.org/"
-title = "Creative portfolio"
+baseurl = "https://gagagal.github.io/hugo-techblog/"
+title = "ヨット逆走テック"
 theme = "hugo-creative-portfolio-theme"
-languageCode = "en-us"
+languageCode = "ja-jp"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
@@ -32,7 +32,7 @@ canonifyurls = true
      # - send a dummy email yourself to confirm your account
      # - click the confirm link in the email from www.formspree.io
      # - you're done. Happy mailing!
-  email = "you@yoursite.com"
+  email = "masaaki.kr8@gmail.com"
 
     # Optional Matomo analytics (formerly piwik)
       # [params.analytics.matomo]
