--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://gagagal.github.io/hugo-techblog/"
-title = "ヨット逆走テック"
+title = "元ヨット逆走"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "ja-jp"
 # Enable comments by entering your Disqus shortname
@@ -14,11 +14,9 @@ canonifyurls = true
   # Style options: default (pink), blue, green, pink, red, sea, violet
   # Use custom.css for your custom styling
   style = "default"
-  description = "Describe your website"
-  copyright = "&copy;2016 Your name or company"
+  description = "燻りテックブログ"
   sidebarAbout = [
-    "I am a creative illustrator and graphic designer with more than 10 years of experience.",
-    "Originally from Toronto, currently based in London."
+    "SEの技術に関して調査したもの、読んだものを主にまとめていこうかなと思います"
   ]
   # Contact page
      # Since this template is static, the contact form uses www.formspree.io as a
@@ -50,22 +48,10 @@ canonifyurls = true
   home = true
 
   [[params.navlinks]]
-  name = "About"
+  name = "About me"
   url = "about/"
 
-  [[params.navlinks]]
-  name = "Get in touch"
-  url = "contact/"
-
   [params.social]
-  facebook      = "full page or profile url in facebook"
-  googleplus    = "full profile url in googleplus"
-  email         = "email@example.com"
-  twitter       = "full profile url in twitter"
-  linkedin      = "full profile url in linkedin"
-  stackoverflow = "full profile url in stackoverflow"
-  instagram     = "full profile url in instagram"
-  github        = "full profile url in github"
-  gitlab        = "full profile url in gitlab"
-  youtube       = "full profile url in youtube"
-  whatsapp      = "wa.me service link"
+  email         = "masaaki.kr8@gmail.com"
+  twitter       = "https://twitter.com/gagagaL_sainum"
+  github        = "https://github.com/gagagaL"
