--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,9 @@ disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = ""
 
+contentDir = "content"
+disableKinds = ["RSS", "sitemap"]
+
 publishDir = "docs"
 canonifyurls = true
 
